# LikeLionFestivalGame

./: CMakeLists.txt  ClockCircle.qml  EndPage.qml  EndText.qml  GameBoard.qml  GameButton.qml  Main.qml  MyText.qml  NextButton.qml  NonPassText.qml  PassText.qml  README.md  StartPage.qml  TimerBar.qml  gameanswer.cpp  gameanswer.h  gamemanager.cpp  gamemanager.h  main.cpp
